# polars-induction

./: .gitignore  pyproject.toml
polars_induction/: main.py  polars_sql.py
